<resources>
    <string name="app_name">Face remember</string>
    <string name="network_error">Network error!</string>
    <string name="service_error">Service error!</string>
    <string name="login_successfully">Login successful!</string>
    <string name="login_wrong_password">Wrong password!</string>
    <string name="login_error">Login unsuccessful!</string>
    <string name="napis_OK">OK</string>
    <string name="URL_signin">http://10.0.2.2/application/login</string>
    <string name="URL_signup">http://10.0.2.2/application/users</string>
    <string name="signup_username_taken">Username already taken!</string>
    <string name="signup_successfully">Sign up successful!</string>
    <string name="signin">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome to Face remember, \npress START to start playing</string>
    <string name="createAccount">Create account</string>
    <string name="login_wrong_username">User not found!</string>
    <string name="addNewFaces">Add new faces</string>
    <string name="myFaces">My faces</string>
    <string name="URL_images">http://10.0.2.2/application/images</string>
    <string name="URL_images_random">http://10.0.2.2/application/imagesRandom</string>
    <string name="URL_names">http://10.0.2.2/application/names</string>
    <string name="URL_images_update">http://10.0.2.2/application/imageUpdate</string>
    <string name="URL_images_preset">http://10.0.2.2/application/images</string>
    <string name="images_download_successful">Images download successful</string>
    <string name="images_download_error">Error downloading images</string>
    <string name="names_download_successful">Names download successful</string>
    <string name="names_download_error">Error downloading names</string>
    <string name="nameButton1" />
    <string name="nameButton2" />
    <string name="nameButton3" />
    <string name="nameButton4" />
    <string name="outOf">/10</string>
    <string name="rightAnswerNotification">You got the right answer!</string>
    <string name="wrongAnswerNotification">You got the wrong answer!</string>
    <string name="yourScore">Your score:</string>
    <string name="yourFaces">Your faces</string>
    <string name="imageSettingsTitle">Change the name and gender of the person!</string>
    <string name="uploadNewFace">Upload new face</string>
    <string name="nameUpload">Name:</string>
    <string name="genderUpload">Gender:</string>
    <string name="previewUpload">Preview:</string>
    <string name="uploadUpload">Upload</string>
    <string name="female">F</string>
    <string name="male">M</string>
    <string name="pleaseSelectAllParameters">Please select all parameters</string>
    <string name="URL_images_upload">http://10.0.2.2/application/imageUploadAndroid</string>
    <string name="URL_images_delete">http://10.0.2.2/application/imageDelete</string>
    <string name="image_upload_successful">Image uploaded successfully</string>
    <string name="image_upload_error">Error uploading image</string>
    <string name="imageSettingsEdit">Edit</string>
    <string name="imageSettingsUpload">Upload</string>
    <string name="image_update_successful">Updated face information successfully!</string>
    <string name="image_delete_successful">Image deleted successfully!</string>
    <string name="confirmation">Are you sure you want to delete this face?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="noFacesUploadedError"> No Faces uploaded! \nHead to ADD NEW FACES to add a Face!</string>
    <string name="custom">Custom game</string>
    <string name="preset">Preset game</string>
    <string name="gameSelection">Select game type! \n For a game with famous faces, select Preset game. \n For a game with custom faces, select Custom game.</string>
</resources>