<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/downloadedImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintVertical_bias=".3"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"/>

    <Button
        android:id="@+id/nameButton1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/nameButton1"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadedImage"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHorizontal_bias="0.10"/>

    <Button
        android:id="@+id/nameButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/nameButton2"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadedImage"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHorizontal_bias="0.90"/>

    <Button
        android:id="@+id/nameButton3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/nameButton3"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadedImage"
        app:layout_constraintVertical_bias=".55"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHorizontal_bias="0.90"/>

    <Button
        android:id="@+id/nameButton4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/nameButton4"
        android:textColor="@color/White"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downloadedImage"
        app:layout_constraintVertical_bias=".55"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintHorizontal_bias="0.10"/>

    <TextView
        android:id="@+id/faceNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".95"
        app:layout_constraintHorizontal_bias=".85"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/faceNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outOf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".95"
        app:layout_constraintHorizontal_bias=".95"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/rightAnswerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".10"
        app:layout_constraintHorizontal_bias=".75"
        android:textSize="30dp"
        android:textColor="@color/Green"/>

    <TextView
        android:id="@+id/wrongAnswerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".10"
        app:layout_constraintHorizontal_bias=".80"
        android:textSize="30dp"
        android:textColor="@color/Red"/>


</androidx.constraintlayout.widget.ConstraintLayout>